feat: Extend booking history DTO with seat and train details, and implement ticket cancellation on the user dashboard.